Finalising AirBnB with admin and profile APIs